[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Solutions"
version = "0.0.1"
description = "A cookie cutter demo"
authors = [
  { name = "Dr. Jishan Ahmed" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Solutions"]
include = ["pyproject.toml", "Solutions/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Solutions"]
force-sort-within-sections = true

